{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Touch",
            "id": "b5ad16a7-1fa2-486d-a44e-51a1be07509a",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "86b192b1-3ca0-496f-82d4-3f2e1e74fe19",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPressed",
                    "type": "Button",
                    "id": "5c1a36de-b192-4ff9-b7ca-16a9a10d640b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touching",
                    "type": "Value",
                    "id": "8fd7549b-0289-49fc-820d-5e7ce9566452",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdc1726a-679e-4daa-97d6-b68ceaa4b1f1",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32e057ae-37ca-4205-8b2c-efc41b8399ca",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99aa9e66-ec60-4aa3-b804-2b514e58a2e3",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touching",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}